<resources>
    <string name="app_name">Community</string>
    <string name="community">健身社交平台</string>
    <string name="title_activity_index">index</string>
    <string name="username">用户名:</string>
    <string name="input_name">请输入用户名</string>
    <string name="password">密码:</string>
    <string name="re_pass">确认密码:</string>
    <string name="input_pass">请输入密码</string>
    <string name="input_re">再次输入密码</string>
    <string name="sex">性别:</string>
    <string name="phone">手机:</string>
    <string name="input_phone">请输入手机号</string>
    <string name="video">教学视频</string>
    <string name="social">社交</string>
    <string name="train">训练</string>
    <string name="my">我的主页</string>
    <string name="daka">打卡</string>
    <string name="my_regular">我的打卡</string>
    <string name="other_regular">朋友打卡</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="time_mode">计时模式</string>
    <string name="number_mode">计数模式</string>
</resources>