<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_video"
        android:icon="@drawable/ic_duo"
        android:title="@string/video" />
    <item
        android:id="@+id/navigation_train"
        android:icon="@drawable/ic_directions_run"
        android:title="@string/train" />
    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_person_add"
        android:title="@string/social" />
    <item
        android:id="@+id/navigation_daka"
        android:icon="@drawable/ic_calendar_today"
        android:title="@string/daka" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_account_box"
        android:title="@string/my" />



</menu>