<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_my_info_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/community"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/community"
        android:textSize="35sp"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="注册账号"
        android:textColor="#ffffff"
        android:textSize="25sp" />
    <View
        android:id="@+id/v_dashLine"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/dashline2" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="60dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:textColor="#ffffff"
            android:text="@string/username"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/input_identity_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:hint="@string/input_name"
            android:maxLines="1"
            android:textSize="20sp" />

    </LinearLayout>
    <View
        android:id="@+id/v_dashLine2"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/dashline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/input_password_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/input_pass"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <View
        android:id="@+id/v_dashLine3"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/dashline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/re_pass"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/re_password_text"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:inputType="textPassword"
            android:hint="@string/input_re"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <View
        android:id="@+id/v_dashLine4"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/dashline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:textSize="20sp"
            android:maxLines="1"
            android:maxLength="11"
            android:inputType="number"
            android:hint="@string/input_phone"
            android:layout_marginStart="5dp" />
    </LinearLayout>
    <View
        android:id="@+id/v_dashLine5"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/dashline" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="60dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/radioGroup"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="0dp"
                android:textSize="20sp"
                android:id="@+id/male"
                android:text="男"
                android:layout_marginEnd="0dp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="女"
                android:textSize="20sp" />
        </RadioGroup>
    </LinearLayout>
    <View
        android:id="@+id/v_dashLine6"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:background="@drawable/dashline2" />

    <Button
        android:id="@+id/register2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="65dp"
        android:background="#009393"
        android:text="注册"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:backgroundTint="#D5356DB1" />
    <Button
        android:id="@+id/login2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="65dp"
        android:background="#009393"
        android:text="登录"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:backgroundTint="#B221B1F3" />


</LinearLayout>